Revert "Upgrade to Langchain4j 1.0.0 and Langchain4j MCP 1.0.0-beta5"
This reverts commit a8621056b0f49948daa1ce511727c8d4a46ffa12.