@@ -15,9 +15,8 @@ import ai.wanaku.core.mcp.common.resolvers.ForwardResolver;
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
 import dev.langchain4j.agent.tool.ToolSpecification;
 import dev.langchain4j.mcp.client.McpClient;
-import dev.langchain4j.mcp.client.McpReadResourceResult;
-import dev.langchain4j.mcp.client.McpResource;
-import dev.langchain4j.mcp.client.McpResourceContents;
+import dev.langchain4j.mcp.client.ResourceRef;
+import dev.langchain4j.mcp.client.ResourceResponse;
 import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
 import dev.langchain4j.model.chat.request.json.JsonSchemaElement;
 import dev.langchain4j.model.chat.request.json.JsonStringSchema;
@@ -47,7 +46,7 @@ public class WanakuForwardResolver implements ForwardResolver {
     @Override
     public List<ResourceReference> listResources() throws ServiceUnavailableException {
         try (McpClient client = ClientUtil.createClient(reference.getAddress())) {
-            List<McpResource> resourceRefs = client.listResources();
+            List<ResourceRef> resourceRefs = client.listResources();
 
             return resourceRefs.stream()
                     .map(WanakuForwardResolver::remoteToLocal).collect(Collectors.toList());
@@ -57,7 +56,7 @@ public class WanakuForwardResolver implements ForwardResolver {
 
     }
 
-    private static ResourceReference remoteToLocal(McpResource remoteRef) {
+    private static ResourceReference remoteToLocal(ResourceRef remoteRef) {
         ResourceReference ref = new ResourceReference();
         ref.setType("mcp-remote-resource");
         ref.setLocation(remoteRef.uri());
@@ -127,11 +126,11 @@ public class WanakuForwardResolver implements ForwardResolver {
     @Override
     public List<ResourceContents> read(ResourceManager.ResourceArguments arguments, ResourceReference mcpResource) {
         try (McpClient client = ClientUtil.createClient(reference.getAddress())) {
-            McpReadResourceResult resourceResponse = client.readResource(mcpResource.getLocation());
+            ResourceResponse resourceResponse = client.readResource(mcpResource.getLocation());
 
-            List<McpResourceContents> contents = resourceResponse.contents();
+            List<dev.langchain4j.mcp.client.ResourceContents> contents = resourceResponse.contents();
             TextResourceContents textResourceContents = TextResourceContents.create(mcpResource.getLocation(),
-                    contents.getFirst().toString());
+                    contents.get(0).asText().text());
 
             return List.of(textResourceContents);
         } catch (Exception e) {
